DBT-376 Migrate to MIR 2023.06.x (#273)
* Apply changes in xsl and properties
* Fix mail queue access
* Update mycore-parent
* Build with Java 21
* Change URL to URI

---------

Co-authored-by: Thomas Scheffler <github@yagee.de>